# chemml-purple-agent

./: .env.example  .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
src/: agent.py  executor.py  messenger.py  server.py
tests/: test_agent.py
